apps/minecraft/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft
  namespace: minecraft
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: mc.michaelthomson.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: minecraft
            port: 
              name: minecraft
  tls:
    - hosts:
        - mc.michaelthomson.dev
      secretName: letsencrypt-wildcard-cert-michaelthomson.dev
